--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "purple_admin",
   "version": "3.0.0",
   "description": "",
-  "main": "index.html",
+  "main": "app.js",
+ 
+
   "dependencies": {
     "@mdi/font": "3.7.95",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "ejs": "^3.1.3",
+    "express": "^4.17.1",
     "jquery": "^3.4.1",
     "perfect-scrollbar": "^1.4.0",
     "popper.js": "^1.15.0"
@@ -37,7 +40,8 @@
     "run-sequence": "^2.2.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "bootstrapdash",
   "url": "http://www.bootstrapdash.com/",
